--- a/python-web_framework/templates/5-number.html
+++ b/python-web_framework/templates/5-number.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Number Template</title>
+        <title>Number</title>
     </head>
     <body>
         <h1> Number: {{n}}</h1>
